--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,10 @@
     "test",
     "tests"
   ],
-
   "dependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^5.2.0",
+    "bootstrap-sass": "^3.3.7",
+    "breakpoint-sass": "^2.7.1"
   }
 }
