--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.1.3",
     "font-awesome": "^5.2.0",
     "bootstrap-sass": "^3.3.7",
-    "breakpoint-sass": "^2.7.1"
+    "breakpoint-sass": "^2.7.1",
+    "components-font-awesome": "^5.0.6"
   }
 }
