--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "font-awesome": "^5.2.0",
     "bootstrap-sass": "^3.3.7",
     "breakpoint-sass": "^2.7.1",
-    "components-font-awesome": "^5.0.6"
+    "components-font-awesome": "^5.0.6",
+    "sass-flex-mixin": "^1.0.3"
   }
 }
